@@ -1,6 +1,7 @@
 2023.159:
 	- Add JSON Merge Patch capability to mseh_set_ptr_r().
 	- Fix zero-padding of empty bytes following data in miniSEED v2 creation.
+	- Rename DE_ASCII to DE_TEXT to generalize to UTF-8, legacy mapping provided.
 
 2023.155:
 	WARNING: API change as follows:
